webapps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapps
  labels:
    app: webapps
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webapps
  template:
    metadata:
      name: webapps
      labels:
        app: webapps
    spec:
      containers:
        - name: webapps
          image: vatusa/webapps
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
      restartPolicy: Always
