webapps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapps-service
  labels:
    app: webapps
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: webapps
